<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="check_hint">Type the result of the check. Ex: 36.50</string>
    <string name="app_logo">App logo</string>
    <string name="checkPercent_tv">0%</string>
    <string name="tip_tv">Tip:</string>
    <string name="tip_total_tv">$0.00</string>
    <string name="total_tv">Total:</string>
    <string name="total_result_tv">$0.00</string>
</resources>